Update My Profile.js and remove images from frontend

--- a/admin-frontend/src/components/common/MyProfile.css
+++ b/admin-frontend/src/components/common/MyProfile.css
@@ -12,6 +12,7 @@
     margin-top: 10px;
    
 }
+
 .profilecontainer{
     border: 1px sloid black;
     padding: 10px;
@@ -27,15 +28,18 @@
    
     margin-top: 30px;
     font-size: 25px;
-    justify-self: end; /* Align labels to the end of the grid cell */
+    justify-self: start; /* Align labels to the end of the grid cell */
     
 }
 
-.personalinfo label span{
+.personalinfo label .dot{
     margin-left: 30px;
     justify-self: start; /* Align spans to the start of the grid cell */
 }
 
+.personalinfo label .inputdata{
+    justify-self: end;
+}
 
 .personalinfo {
     display: grid;
