Delivery Manager Update profile

--- a/admin-frontend/src/components/pages/DeliveryManager/DeliveryManagerDashBoard.css
+++ b/admin-frontend/src/components/pages/DeliveryManager/DeliveryManagerDashBoard.css
@@ -7,6 +7,9 @@
     display: flex;
 }
   
+.deliverymanagercontainer{
+    margin-left: 250px;
+}
 .orderset {
     display: flex;
     justify-content: space-between; /* Distribute items evenly */
