--- a/frontend/src/components/css/TableReservations.css
+++ b/frontend/src/components/css/TableReservations.css
@@ -1,29 +1,27 @@
-/* OutsideReservationContainer.css */
-
 .reservation-container {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-  }
-  
-  .reservation-form label {
+}
+    
+.reservation-form label {
     display: block;
     margin-bottom: 10px;
-  }
-  
-  .reservation-form input[type="date"],
-  .reservation-form input[type="time"],
-  .reservation-form input[type="number"],
-  .reservation-form textarea,
-  .reservation-form select {
+}
+    
+.reservation-form input[type="text"],
+.reservation-form input[type="date"],
+.reservation-form input[type="time"],
+.reservation-form input[type="number"],
+.reservation-form textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-  
-  .reservation-form button {
+}
+    
+.reservation-form button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -32,15 +30,14 @@
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
-  }
-  
-  .reservation-form button:hover {
+}
+    
+.reservation-form button:hover {
     background-color: #45a049;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .reservation-container {
-      width: 90%;
-    }
-  }
-  
+}
+    
+@media screen and (max-width: 600px) {
+.reservation-container {
+    width: 90%;
+ }
+}
